# talkpython-fastapi

./: README.md  main.py  pyproject.toml
